Problem with psutils-based booklet generation solved.

--- a/einzelhefte/1/makefile
+++ b/einzelhefte/1/makefile
@@ -1,5 +1,5 @@
 # Copyright (C) 2016  Stephan Kreutzer
-# Creative Commons BY-SA 4.0
+# GNU Affero General Public License 3 or, at your option, any later version of this license.
 # http://www.refugee-it.de
 
 
@@ -13,13 +13,9 @@ all: heft_1_print.pdf
 
 
 heft_1_print.pdf: heft_1.pdf
-	pdf2ps heft_1.pdf 1.ps
-	psbook 1.ps 2.ps
-	psnup -Pa4 -l -pa3 -2 -s1 2.ps 3.ps
-	ps2pdf -sPAPERSIZE=a3 3.ps heft_1_print.pdf
-	rm 3.ps
-	rm 2.ps
-	rm 1.ps
+	pdfbook --landscape --paper a3paper --outfile heft_1_print_booklet.pdf heft_1.pdf
+	gs -o heft_1_print.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_1_print_booklet.pdf
+	rm heft_1_print_booklet.pdf
 
 heft_1.pdf: ../../latin_letter_a.pdf ../../latin_letter_b.pdf ../../latin_letter_c.pdf ../../latin_letter_d.pdf
 	pdfunite ../../latin_letter_a.pdf ../../latin_letter_b.pdf ../../latin_letter_c.pdf ../../latin_letter_d.pdf ./heft_1.pdf
