--- a/einzelhefte/3/makefile
+++ b/einzelhefte/3/makefile
@@ -1,5 +1,5 @@
 # Copyright (C) 2016  Stephan Kreutzer
-# Creative Commons BY-SA 4.0
+# GNU Affero General Public License 3 or, at your option, any later version of this license.
 # http://www.refugee-it.de
 
 
@@ -13,13 +13,9 @@ all: heft_3_print.pdf
 
 
 heft_3_print.pdf: heft_3.pdf
-	pdf2ps heft_3.pdf 1.ps
-	psbook 1.ps 2.ps
-	psnup -Pa4 -l -pa3 -2 -s1 2.ps 3.ps
-	ps2pdf -sPAPERSIZE=a3 3.ps heft_3_print.pdf
-	rm 3.ps
-	rm 2.ps
-	rm 1.ps
+	pdfbook --landscape --paper a3paper --outfile heft_3_print_booklet.pdf heft_3.pdf
+	gs -o heft_3_print.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_3_print_booklet.pdf
+	rm heft_3_print_booklet.pdf
 
 heft_3.pdf: ../../latin_letter_i.pdf ../../latin_letter_j.pdf ../../latin_letter_k.pdf ../../latin_letter_l.pdf
 	pdfunite ../../latin_letter_i.pdf ../../latin_letter_j.pdf ../../latin_letter_k.pdf ../../latin_letter_l.pdf ./heft_3.pdf
