--- a/einzelhefte/7/makefile
+++ b/einzelhefte/7/makefile
@@ -1,5 +1,5 @@
 # Copyright (C) 2016  Stephan Kreutzer
-# Creative Commons BY-SA 4.0
+# GNU Affero General Public License 3 or, at your option, any later version of this license.
 # http://www.refugee-it.de
 
 
@@ -13,13 +13,9 @@ all: heft_7_print.pdf
 
 
 heft_7_print.pdf: heft_7.pdf
-	pdf2ps heft_7.pdf 1.ps
-	psbook 1.ps 2.ps
-	psnup -Pa4 -l -pa3 -2 -s1 2.ps 3.ps
-	ps2pdf -sPAPERSIZE=a3 3.ps heft_7_print.pdf
-	rm 3.ps
-	rm 2.ps
-	rm 1.ps
+	pdfbook --landscape --paper a3paper --outfile heft_7_print_booklet.pdf heft_7.pdf
+	gs -o heft_7_print.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_7_print_booklet.pdf
+	rm heft_7_print_booklet.pdf
 
 heft_7.pdf: ../../latin_letter_y.pdf ../../latin_letter_z.pdf ../../latin_letter_a_with_diaeresis.pdf ../../latin_letter_o_with_diaeresis.pdf
 	pdfunite ../../latin_letter_y.pdf ../../latin_letter_z.pdf ../../latin_letter_a_with_diaeresis.pdf ../../latin_letter_o_with_diaeresis.pdf ./heft_7.pdf
