--- a/einzelhefte/8/makefile
+++ b/einzelhefte/8/makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2016  Stephan Kreutzer
+# Copyright (C) 2016-2017  Stephan Kreutzer
 # GNU Affero General Public License 3 or, at your option, any later version of this license.
 # http://www.refugee-it.de
 
@@ -8,18 +8,30 @@
 
 
 
-all: heft_8_print.pdf
+all: heft_8_print.pdf heft_8_print_booklet.pdf
 
 
 
 heft_8_print.pdf: heft_8.pdf
-	pdfbook --landscape --paper a3paper --outfile heft_8_print_booklet.pdf heft_8.pdf
-	gs -o heft_8_print.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_8_print_booklet.pdf
-	rm heft_8_print_booklet.pdf
+	pdf2ps heft_8.pdf heft_8_print_temp_1.ps
+	psbook heft_8_print_temp_1.ps heft_8_print_temp_2.ps
+	psnup -Pa4 -l -pa3 -2 -s1 heft_8_print_temp_2.ps heft_8_print_temp_3.ps
+	ps2pdf -sPAPERSIZE=a3 heft_8_print_temp_3.ps heft_8_print_temp.pdf
+	gs -o heft_8_print.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_8_print_temp.pdf
+	rm heft_8_print_temp_1.ps
+	rm heft_8_print_temp_2.ps
+	rm heft_8_print_temp_3.ps
+	rm heft_8_print_temp.pdf
+
+heft_8_print_booklet.pdf: heft_8.pdf
+	pdfbook --landscape --paper a3paper --outfile heft_8_print_booklet_temp.pdf heft_8.pdf
+	gs -o heft_8_print_booklet.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress heft_8_print_booklet_temp.pdf
+	rm heft_8_print_booklet_temp.pdf
 
 heft_8.pdf: ../../latin_letter_u_with_diaeresis.pdf ../../leer.pdf
-	pdfunite ../../latin_letter_u_with_diaeresis.pdf ../../leer.pdf ../../leer.pdf ../../leer.pdf ./heft_8.pdf
+	pdfunite ../../latin_letter_u_with_diaeresis.pdf ../../leer.pdf ../../leer.pdf ../../leer.pdf ../../leer.pdf ../../leer.pdf ../../leer.pdf ./heft_8.pdf
 
 clean:
+	rm -f ./heft_8_print_booklet.pdf
 	rm -f ./heft_8_print.pdf
 	rm -f ./heft_8.pdf
